Update logo image file extensions

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <div class="container-fluid">
                     <div class="col-auto col-lg-2 me-lg-0 me-auto">
                         <a class="navbar-brand" href="demo-elearning.html">
-                            <img src="images/short.PNG" data-at2x="images/short.PNG" alt="" class="default-logo">
-                            <img src="images/short.PNG" data-at2x="images/short.PNG" alt="" class="alt-logo">
-                            <img src="images/short.PNG" data-at2x="images/short.PNG" alt="" class="mobile-logo"> 
+                            <img src="images/short.png" data-at2x="images/short.png" alt="" class="default-logo">
+                            <img src="images/short.png" data-at2x="images/short.png" alt="" class="alt-logo">
+                            <img src="images/short.png" data-at2x="images/short.png" alt="" class="mobile-logo"> 
                         </a>
                     </div>
                     <div class="col-auto menu-order position-static">
